created UserServiceTest and fixed AdminServiceTEst